--- a/package.json
+++ b/package.json
@@ -3,4 +3,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "typescript": "^4.8.3"
+  }
 }
